[gd_scene load_steps=17 format=3 uid="uid://bluwr6ryqpoh0"]

[ext_resource type="Script" path="res://scripts/button.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://bvq13t8lv08s6" path="res://Sprites/title.png" id="1_rtw2f"]
[ext_resource type="Texture2D" uid="uid://dgkfcogjtb5wv" path="res://Sprites/buttonstart.png" id="2_bqqt6"]
[ext_resource type="Script" path="res://scripts/button_2.gd" id="3_bqqt6"]
[ext_resource type="Shader" path="res://assets/main_menu.gdshader" id="4_8ln24"]
[ext_resource type="Texture2D" uid="uid://du6ow1v644q0f" path="res://assets/placeholderfloor.png" id="4_wu84c"]

[sub_resource type="Animation" id="Animation_tbmy8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_oa1go"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 2.96667, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(2.75, 2.75), Vector2(2.5, 2.5), Vector2(2.25, 2.25), Vector2(2.5, 2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 2.96667, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0436332, 0.0, -0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jk1qb"]
_data = {
&"RESET": SubResource("Animation_tbmy8"),
&"idle": SubResource("Animation_oa1go")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmy8"]
atlas = ExtResource("2_bqqt6")
region = Rect2(96, 0, 80, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1qb"]
atlas = ExtResource("2_bqqt6")
region = Rect2(0, 0, 80, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5dd4i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbmy8")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1qb")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wu84c"]
atlas = ExtResource("2_bqqt6")
region = Rect2(96, 96, 80, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ln24"]
atlas = ExtResource("2_bqqt6")
region = Rect2(0, 96, 80, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rtw2f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu84c")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ln24")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ln24"]
shader = ExtResource("4_8ln24")
shader_parameter/speed = 1.0

[node name="Main Menu" type="Node2D"]

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, -79)
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_rtw2f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
libraries = {
&"": SubResource("AnimationLibrary_jk1qb")
}
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="Button" type="Button" parent="."]
offset_left = -36.0
offset_top = -10.0
offset_right = 37.0
offset_bottom = 11.0
flat = true
script = ExtResource("1_ekxnf")

[node name="PlayButton" type="AnimatedSprite2D" parent="Button"]
position = Vector2(36, 10)
sprite_frames = SubResource("SpriteFrames_5dd4i")
animation = &"Up"

[node name="Timer" type="Timer" parent="Button"]
one_shot = true

[node name="Button2" type="Button" parent="."]
offset_left = -32.0
offset_top = 34.0
offset_right = 37.0
offset_bottom = 62.0
scale = Vector2(0.9, 0.9)
flat = true
script = ExtResource("3_bqqt6")

[node name="Timer2" type="Timer" parent="Button2"]

[node name="QuitButton" type="AnimatedSprite2D" parent="Button2"]
position = Vector2(35.5556, 13.3333)
sprite_frames = SubResource("SpriteFrames_rtw2f")
animation = &"up"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2(0, 0)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource("ShaderMaterial_8ln24")
offset_left = -338.0
offset_top = -190.0
offset_right = 681.0
offset_bottom = 342.0
texture = ExtResource("4_wu84c")
stretch_mode = 1
metadata/_edit_lock_ = true

[connection signal="button_down" from="Button" to="Button" method="_on_button_down"]
[connection signal="button_up" from="Button" to="Button" method="_on_button_up"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="timeout" from="Button/Timer" to="Button" method="_on_timer_timeout"]
[connection signal="button_down" from="Button2" to="Button2" method="_on_button_down"]
[connection signal="button_up" from="Button2" to="Button2" method="_on_button_up"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_pressed"]
[connection signal="timeout" from="Button2/Timer2" to="Button2" method="_on_timer_2_timeout"]
